--- a/index.html
+++ b/index.html
@@ -3,6 +3,12 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="twitter:card" content="summary_large_image">
+	<meta name="twitter:site" content="@aaaa56039257" />
+	<meta property="og:url" content="https://tr-nt.github.io/mypage/" />
+	<meta property="og:title" content="ポートフォリオ" />
+	<meta property="og:description" content="フレームワークを参考にLPサイトもどきをつくりました！" />
+	<meta property="og:image" content="https://tr-nt.github.io/mypage/img/unsplash.jpg" />
 	<title>My first Portfolio</title>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
