--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 					<a href="#" class="nav-link">Home</a>
 				</li>
 				<li class="nav-item">
-					<a href="#" class="nav-link">About</a>
+					<a href="#" class="nav-link">勉強中の言語</a>
 				</li>
 				<li class="nav-item">
 					<a href="#" class="nav-link">Services</a>
@@ -61,7 +61,7 @@
 		<div class="carousel-item active">
 			<img src="img/unsplash.jpg">
 			<div class="carousel-caption">
-				<h1 class="display-2">新しい事しよう！</h1>
+				<h1 class="display-2">新しい事したい！</h1>
 				<h3 class="">初めてのLP作成</h3>
 				<button type="button" class="btn btn-outline-light btn-lg">Exit Desktop</button>
 				<button type="button" class="btn btn-primary btn-lg">Play Start</button>
@@ -88,7 +88,7 @@
 <div class="container-fluid">
 <div class="row jumbotron">
 	<div class="col-xs-12 col-sm-12 col-md-9 col-lg-9 col-xl-10">
-		<p class="lead">新しいことに挑戦するのって面白い！そんな気持ちでホームページを作ってみたいと思い作りました(丸パクリだけど...でも最初は皆真似するものだ！うん！)</p>
+		<p class="lead">新しいことに挑戦するのって面白い！そんな気持ちでホームページを作ってみたいと思い作りました(丸パクリだけど...笑)</p>
 	</div>
 	<div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 col-xl-2">
 		<a href="#"><button type="button" class="btn btn-outline-secondary btn-lg">工事中です・・・！</button></a>
