--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 					<a href="#" class="nav-link">Home</a>
 				</li>
 				<li class="nav-item">
-					<a href="#" class="nav-link">勉強中の言語</a>
+					<a href="#language" class="nav-link">勉強中の言語</a>
 				</li>
 				<li class="nav-item">
 					<a href="#" class="nav-link">Services</a>
@@ -100,7 +100,7 @@
 <div class="container-fluid padding">
 <div class="row welcome text-center">
 	<div class="col-12">
-		<h1 class="display-4">勉強中の言語</h1>
+		<h1 id="language" class="display-4">勉強中の言語</h1>
 	</div>
 	<hr>
 	<div class="col-12">
