--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 					<a href="#" class="nav-link">Services</a>
 				</li>
 				<li class="nav-item">
-					<a href="#" class="nav-link">Team</a>
+					<a href="#things" class="nav-link">次にやってみたい事</a>
 				</li>
 				<li class="nav-item">
 					<a href="#" class="nav-link">Connect</a>
@@ -184,7 +184,7 @@
 <div class="row welcome text-center">
 	<div class="col-12">
 		<div>
-			<h1 class="display-4">次にやってみたいこと</h1>
+			<h1 id="things" class="display-4">次にやってみたい事</h1>
 		</div>
 		<hr>
 	</div>
