--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 					<a href="#language" class="nav-link">勉強中の言語</a>
 				</li>
 				<li class="nav-item">
-					<a href="#" class="nav-link">Services</a>
+					<a href="#program" class="nav-link">プログラミングとは？</a>
 				</li>
 				<li class="nav-item">
 					<a href="#things" class="nav-link">次にやってみたい事</a>
@@ -136,10 +136,10 @@
 <div class="container-fluid padding">
 <div class="row padding">	
 	<div class="col-lg-6">
-	<h2>プログラミングのすごい所</h2>
-	<p>没頭しすぎて気づいたら朝。でも、思ったほど進んではいないｗ</p>
-	<p>大体思った通りに表示してくれない。私の場合は５回やって1回うまくいけばいいほう。</p>
-	<p>うまく表示してくれた時の感動は心に来るものがあります。</p>
+	<h2 id="program">プログラミングとは？</h2>
+	<p>私たちの生活を豊かにしている！</p>
+	<p>例でいうとアマゾンやメルカリなどのWEBサービスプログラミングでできています。</p>
+	<p>僕たちの生活が楽に便利に簡単になってますよね。プログラミングすごい！</p>
 	<br>
 	<a href="#" class="btn btn-primary">Read More</a>
 	</div>
