--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 	<div class="col-lg-6">
 	<h2 id="program">プログラミングとは？</h2>
 	<p>私たちの生活を豊かにしている！</p>
-	<p>例でいうとアマゾンやメルカリなどのWEBサービスプログラミングでできています。</p>
+	<p>例でいうとアマゾンやメルカリなどのWEBサービスもプログラミングでできています。</p>
 	<p>僕たちの生活が楽に便利に簡単になってますよね。プログラミングすごい！</p>
 	<br>
 	<a href="#" class="btn btn-primary">Read More</a>
@@ -201,7 +201,7 @@
 			<div class="card-body">
 				<h4 class="card-title">Javascript</h4>
 				<p class="card-text">Javascriptはchromeで動くのでコンパイル等めんどくさいことをしないでいいみたいです。</p>
-				<a href="#" class="btn btn-outline-secondary">javascriptをぐぐる</a>
+				<a href="https://www.google.com/search?q=Javascript&oq=Javascript&aqs=chrome..69i57j69i59l2j35i39j69i61l3j69i60.4156j0j7&sourceid=chrome&ie=UTF-8" class="btn btn-outline-secondary">javascriptをぐぐる</a>
 			</div>
 		</div>
 	</div>
