--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
 	</div>
 	<div class="col-12 social padding">
 		<a href="#"><i class="fab fa-facebook"></i></a>
-		<a href="#"><i class="fab fa-twitter"></i></a>
+		<a href="https://twitter.com/aaaa56039257"><i class="fab fa-twitter"></i></a>
 		<a href="#"><i class="fab fa-google-plus-g"></i></a>
 		<a href="#"><i class="fab fa-instagram"></i></a>
 		<a href="#"><i class="fab fa-youtube"></i></a>
