--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 	</div>
 	<hr>
 	<div class="col-12">
-		<p class="lead">こんにちは初めまして！HelloWorld.から始まり2週間頑張りやっとここまでたどり着けました。個人的に面白かったので何を勉強したかまとめました。(ほとんどデイトラです。)</p>
+		<p class="lead">こんにちは初めまして！HelloWorld.から始まり2週間頑張りやっとここまでたどり着けました。</p>
 	</div>
 </div>	
 </div>
